feat(session, auth, linter): session models, create new session; improve login flow; linter fixes

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -45,6 +45,11 @@ linters-settings:
       - .WithMessagef(
       - .WithStack(
 
+  revive:
+    rules:
+      - name: blank-imports
+        disabled: true
+
   prealloc:
     for-loops: true
 
