--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ volumes:
   prom_data:
   redis_data:
   redis_conf:
+  prompter_data:
 
 services:
   jaeger:
@@ -98,6 +99,8 @@ services:
       - "9990:9990"
     depends_on:
       - jaeger
+    volumes:
+      - prompter_data:/root/.cache/huggingface
     deploy:
       resources:
         reservations:
