front: добавить dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -168,3 +168,12 @@ services:
       - jaeger
       - keycloak
       - redis
+  
+  frontend:
+    build:
+        context: ./frontend
+        dockerfile: Dockerfile
+    container_name: frontend
+    restart: always
+    ports:
+        - "3000:3000"
