--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -118,6 +118,8 @@ services:
       context: ./prompter
       dockerfile: Dockerfile
     restart: always
+    env_file:
+      - .env
     image: prompter
     ports:
       - "9990:9990"
@@ -129,6 +131,8 @@ services:
       context: ./predictor
       dockerfile: Dockerfile
     restart: always
+    env_file:
+      - .env
     image: predictor
     ports:
       - "9980:9980"
@@ -143,6 +147,8 @@ services:
       dockerfile: Dockerfile
       target: prod
     restart: always
+    env_file:
+      - .env
     image: chat
     ports:
       - "10000:10000"
@@ -159,6 +165,8 @@ services:
       dockerfile: Dockerfile
       target: prod
     restart: always
+    env_file:
+      - .env
     image: api
     ports:
       - "9999:9999"
@@ -177,6 +185,8 @@ services:
       dockerfile: BotDockerfile
       target: prod
     restart: always
+    env_file:
+      - .env
     image: bot
     ports:
       - "11000:11000"
@@ -194,5 +204,7 @@ services:
         dockerfile: Dockerfile
     container_name: frontend
     restart: always
+    env_file:
+      - .env
     ports:
         - "3000:3000"
