fix(keycloak host)

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ POSTGRES_TEST_DB=test
 
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
+KEYCLOAK_HOST=keycloak.domain
 
 GF_ADMIN_USER=admin
 GF_ADMIN_PASSWORD=admin
