fix(keycloak db host)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,7 +72,7 @@ services:
       - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
       - KC_HOSTNAME=${KEYCLOAK_HOSTNAME}
-      - KC_DB_URL_HOST=pg
+      - KC_DB_URL_HOST=${KEYCLOAK_DB_HOST}
       - KC_DB_URL_PORT=5432
       - KC_DB_URL_DATABASE=${POSTGRES_DB}
       - KC_DB_USERNAME=${POSTGRES_USER}
