--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
+    "hsl-to-hex": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.390.0",
     "mobx": "^6.12.3",
@@ -28,11 +30,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
+    "recharts-to-png": "^2.3.2",
     "sass": "^1.77.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.5",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
