--- a/predictor/.env.example
+++ b/predictor/.env.example
@@ -1,3 +1,6 @@
 MONGO_HOST=mongo
 MONGO_PORT=27017
 MONGO_DB=dev
+MATCHER=colbert # ya/colbert
+API_KEY="123" # optional (needed for ya mathcer)
+FOLDER_ID="123" # optional (needed for ya mathcer)
