prompter: add yagpt prompter

--- a/prompter/.env.example
+++ b/prompter/.env.example
@@ -1,1 +1,4 @@
 OLLAMA_HOST="https://ollama"
+MODEL_CHOICE=yandexgpt # choose from yandexgpt, saiga 
+YANDEX_API_KEY=api_key # your yandex api key
+YANDEX_FOLDER_ID=folder_id # your yandex folder id
