fix(docs, configs): update config examples and swagger docs

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,41 @@
-PROJECT_DIR=~/Code/hack/ldt-2024
+PROJECT_DIR=~/ldt-2024
 BASE_IMAGE=ldt-2024
 
 POSTGRES_USER=pguser
 POSTGRES_PASSWORD=pgpass
-POSTGRES_HOST=localhost
+POSTGRES_HOST=192.168.1.80
 POSTGRES_PORT=5432
 POSTGRES_DB=dev
 
 POSTGRES_TEST_USER=pguser
 POSTGRES_TEST_PASSWORD=pgpass
-POSTGRES_TEST_HOST=localhost
+POSTGRES_TEST_HOST=192.168.1.80
 POSTGRES_TEST_PORT=5432
 POSTGRES_TEST_DB=test
 
-KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=admin
-KEYCLOAK_HOST=keycloak.domain
-KEYCLOAK_DB_HOST=pg
+KEYCLOAK_ADMIN=kcadmin
+KEYCLOAK_ADMIN_PASSWORD=kcpass
+KEYCLOAK_HOSTNAME=keycloak.domain.com
+KEYCLOAK_DB_HOST=192.168.1.80
 
-GF_ADMIN_USER=admin
-GF_ADMIN_PASSWORD=admin
-
-REDIS_PASSWORD=redispass
+GF_ADMIN_USER=grafanauser
+GF_ADMIN_PASSWORD=grafanapass
 
 MINIO_USER=s3miniouser
 MINIO_PASSWORD=s3miniopass
+
+OLLAMA_HOST=https://ollama-domain.com
+
+MONGO_HOST=192.168.1.80
+MONGO_PORT=27017
+MONGO_DB=dev
+MATCHER=ya # ya/colbert
+API_KEY="yagpt_api_key"
+FOLDER_ID="folder_id"
+
+YANDEX_API_KEY=yagpt_api_key
+YANDEX_FOLDER_ID=folder_id
+MODEL_CHOICE=yandexgpt
+
+VITE_API_URL=https://your-domain.com
+VITE_WS_URL=wss://your-domain.com/ws
