--- a/api/config/config_example.yaml
+++ b/api/config/config_example.yaml
@@ -4,25 +4,25 @@ server:
   gateway_port: 9998
 
 keycloak:
-  url: "http://keycloak:8080"
+  url: "http://192.168.1.80:8080"
   client_id: "ldt-client"
-  client_secret: "s0m3Cl13NtS3cr3T"
+  client_secret: "client secret"
   realm: "ldt"
   admin_realm: "master"
-  user: "admin"
-  password: "admin"
+  user: "kcuser"
+  password: "kcpass"
 
 postgres:
   user: "pguser"
   password: "pgpass"
-  host: "pg"
+  host: "192.168.1.80"
   port: 5432
   db: "dev"
   ssl: false
   retry_timeout: 20
 
 jaeger:
-  host: "jaeger"
+  host: "192.168.1.80"
   port: 4318
 
 prometheus:
@@ -30,10 +30,16 @@ prometheus:
   port: 9991
 
 prompter:
-  host: "prompter"
+  host: "192.168.1.80"
   port: 9990
 
 predictor:
-  host: "predictor"
+  host: "192.168.1.80"
   port: 9980
 
+mongo:
+  host: "192.168.1.80"
+  port: 27017
+  db: "product"
+  auth_type: "no"
+  retry_timeout: 20
