feat(notification): switch notifications for user per organization

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,8 @@ MONGO_DB=dev
 MATCHER=ya # ya/colbert
 API_KEY="yagpt_api_key"
 FOLDER_ID="folder_id"
+MAIL_USERNAME=test@test.com
+MAIL_PASSWORD=pass
 
 YANDEX_API_KEY=yagpt_api_key
 YANDEX_FOLDER_ID=folder_id
