--- a/predictor/.env.example
+++ b/predictor/.env.example
@@ -3,3 +3,10 @@ MONGO_PORT=27017
 MATCHER=colbert # ya/colbert
 API_KEY="123" # optional (needed for ya mathcer)
 FOLDER_ID="123" # optional (needed for ya mathcer)
+MAIL_USERNAME=test@test.com
+MAIL_PASSWORD=pass
+POSTGRES_USER=pguser
+POSTGRES_PASSWORD=pgpass
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=dev
