--- a/predictor/requirements.txt
+++ b/predictor/requirements.txt
@@ -22,3 +22,4 @@ opentelemetry-exporter-jaeger
 opentelemetry-instrumentation
 opentelemetry-semantic-conventions
 opentelemetry-exporter-otlp
+asyncpg
