--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "hsl-to-hex": "^1.0.0",
@@ -36,6 +37,7 @@
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-papaparse": "^4.4.0",
